# doctora

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md
.claude/agents/: doctora-architect-experience.md  doctora-architect.md  rust-implementation-experience.md  rust-implementation.md
.claude/skills/code-review/: SKILL.md
.claude/skills/debugging/: SKILL.md
.claude/skills/feature-design/: SKILL.md
.claude/skills/project-management/: SKILL.md
.claude/skills/rust-coding/: SKILL.md
benches/: parser_bench.rs
docs/: BENCHMARK_RESULTS.md
docs/design/: TODO.md  architecture.md
docs/design/features/: core-parser.md
docs/design/templates/: feature-template.md
src/: ast.rs  error_recovery.rs  lib.rs  main.rs  parser.rs  parser_winnow.rs  token.rs
