[package]
name = "doctora"
version = "0.1.0"
edition = "2024"
authors = ["Doctor A Contributors"]
description = "A modular AsciiDoc parser and processor written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/doctora"

[dependencies]
logos = "0.15"
chumsky = "0.11"
winnow = "0.7"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "parser_bench"
harness = false
